---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/examples/list-equivalence-3.prql
---
from employees
derive gross_salary = salary + payroll_tax
derive gross_cost = gross_salary + benefits_cost



